	* fix stalled pieces on disk-full errors
	* fix build configuration issue on NetBSD, OpenBSD and DragonFly
	* make UTF-8 sanitization a bit stricter. This will re-write invalid UTF-8
	  code points encoding surrogate pairs
	* fix restoring last_seen_complete from resume data
	* fix issue on MacOS where the DHT was not restarted on a network-up notification
	* make remove_torrent flags be treated as flags (instead of an enum)

1.2.14 released

	* improve handling of seed flag in PEX messages
	* fix issue of accruing unlimited DHT node candidates when DHT is disabled
	* fix bug in parsing chunked encoding
	* fix incorrect reporting of active_duration when entering graceful-pause
	* fix python binding for functions taking string_view
	* fix python binding for torrent_info constructor overloads
	* issue python deprecation warnings for some deprecated functions in the python bindings
	* fix python binding for torrent_info::add_url_seed, add_tracker and add_http_seed

1.2.13 released

	* Use /etc/ssl/cert.pem to validate HTTPS connections on MacOS
	* allow no-interest timeouts of peer connections before all connections slots are full
	* fix issue where a DHT message would count as an incoming connection
	* fix issue when failing to parse outgoing_interfaces setting
	* fix super-seeding issue that could cause a segfault
	* fix data race in python binding of session::get_torrent_status()
	* fix need_save_resume_data() for renaming files, share-mode, upload-mode,
	  disable- pex, lsd, and dht.
	* fix incoming TCP connections when using tracker-only proxy
	* fix issue with paths starting with ./
	* fix integer overflow when setting a high DHT upload rate limit
	* improve Path MTU discovery logic in uTP
	* fix overflow issue when rlimit_nofile is set to infinity
	* fix issue in python binding interpreting int settings > INT_MAX
	* Fix cxxflags and linkflags injection via environment variables

1.2.12 released

	* fix loading of DHT node ID from previous session on startup