@@ -1788,7 +1788,7 @@ namespace {
 		// change after the session is up and listening, at no other point
 		// set_proxy_settings is called with the correct proxy configuration,
 		// internally, this method handle the SOCKS5's connection logic
-		ret->udp_sock->sock.set_proxy_settings(proxy(), m_alerts);
+		ret->udp_sock->sock.set_proxy_settings(proxy(), m_alerts, get_resolver());
 
 		ADD_OUTSTANDING_ASYNC("session_impl::on_udp_packet");
 		ret->udp_sock->sock.async_read(aux::make_handler(std::bind(&session_impl::on_udp_packet
@@ -5378,7 +5378,7 @@ namespace {
 	void session_impl::update_proxy()
 	{
 		for (auto& i : m_listen_sockets)
-			i->udp_sock->sock.set_proxy_settings(proxy(), m_alerts);
+			i->udp_sock->sock.set_proxy_settings(proxy(), m_alerts, get_resolver());
 	}
 
 	void session_impl::update_ip_notifier()
